recursion.cons.concat.Concat.scala.error
Erreur de compilation :
Concat:6: error: not found: value l
    return l.head :: concat(l1.tail,l2);
           ^